WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229596
Fix a typo in `ArgumentCoder<Ref<Font>>::decode()`
https://bugs.webkit.org/show_bug.cgi?id=229596
Summary
Fix a typo in `ArgumentCoder<Ref<Font>>::decode()`
Wenson Hsieh
Reported
2021-08-26 17:54:13 PDT
"renderingRersouceIdentifier"
Attachments
Patch
(2.09 KB, patch)
2021-08-26 17:56 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-26 17:56:50 PDT
Created
attachment 436595
[details]
Patch
EWS
Comment 2
2021-08-26 19:06:45 PDT
Committed
r281679
(
241029@main
): <
https://commits.webkit.org/241029@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436595
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug