Fix a typo in `ArgumentCoder<Ref<Font>>::decode()` https://bugs.webkit.org/show_bug.cgi?id=229596

Reviewed by Tim Horton.

Change `renderingRersouceIdentifier` to `renderingResourceIdentifier`.

* Shared/WebCoreArgumentCoders.cpp:
(IPC::ArgumentCoder<Ref<Font>>::decode):


Canonical link: https://commits.webkit.org/241029@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281679 268f45cc-cd09-0410-ab3c-d52691b4dbfc